--- a/events/templates/contact.html
+++ b/events/templates/contact.html
@@ -7,8 +7,8 @@
 <!-- contact section starts  -->
 {% if person_name %}
     <center>
-        <h2>Thanks {{ person_name }}</h2>
-        <p>I received your email and will get back to you shortly...</p>
+        <h2 style="color: var(--primary-text-color);">Thanks {{ person_name }} !</h2>
+        <p style="color: var(--primary-text-color);">I received your email and will get back to you shortly...</p>
     </center>
     <br/><br/>
 {% else %}
