--- a/events/templates/footer.html
+++ b/events/templates/footer.html
@@ -11,5 +11,5 @@
         <a class="btn btn-outline-primary btn-social mx-1" href="https://discord.gg/thwmfJG4f2"><i class="fab fa-fw fa-discord"></i></a>
     </div>
 </div>
-<div class="footer">Copyright &copy;<span><a href="https://harshman-chatterjee.herokuapp.com"> Harshman Chatterjee </a></span> | all rights reserved!</div>
+<div class="footer">Copyright &copy;<a href="https://harshman-chatterjee.herokuapp.com"> Harshman Chatterjee </a>| all rights reserved!</div>
 <!-- footer section ends-->
